Fix BlockExplorer view on small and medium breakpoints

--- a/packages/interbit-ui-components/src/css/interbit.css
+++ b/packages/interbit-ui-components/src/css/interbit.css
@@ -5830,7 +5830,8 @@ a {
 .ibweb-block-explorer {
   height: calc(100vh - 50px - 92px - 15px - 30px);
   margin-left: -15px;
-  margin-right: -15px; }
+  margin-right: -15px;
+  margin-bottom: 64px; }
   .ibweb-block-explorer h5 {
     padding-left: 15px; }
     .ibweb-block-explorer h5.heading {
@@ -5934,6 +5935,22 @@ a {
       .ibweb-block-explorer .actions table tbody tr:first-child td:first-child {
         vertical-align: top;
         padding-top: 18px; }
+  @media (max-width: 1023px) {
+    .ibweb-block-explorer {
+      height: auto; }
+      .ibweb-block-explorer .col-blocks {
+        height: 400px;
+        border-right: 1px solid #333; }
+      .ibweb-block-explorer .col-state {
+        height: 800px;
+        border-right: 1px solid #333; }
+      .ibweb-block-explorer .col-state {
+        height: 800px; } }
+  @media (max-width: 629px) {
+    .ibweb-block-explorer .col-state {
+      height: 500px; }
+    .ibweb-block-explorer .col-metadata {
+      height: 600px; } }
 
 .ibweb-dev-sidebar-list-row {
   position: relative;
