--- a/packages/interbit-ui-components/src/scss/interbit/_block-explorer.scss
+++ b/packages/interbit-ui-components/src/scss/interbit/_block-explorer.scss
@@ -9,6 +9,8 @@
   height: $explorer-height;
   margin-left: -15px;
   margin-right: -15px;
+  margin-bottom: $margin-lg;
+
   h5 {
     padding-left: 15px;
     &.heading {
@@ -161,6 +163,34 @@
         vertical-align: top;
         padding-top: 18px;
       }
+    }
+  }
+
+  @media (max-width: $screen-lg-min - 1) {
+    height: auto;
+
+    .col-blocks {
+      height: 400px;
+      border-right: 1px solid #333;
+    }
+
+    .col-state {
+      height: 800px;
+      border-right: 1px solid #333;
+    }
+
+    .col-state {
+      height: 800px;
+    }
+  }
+
+  @media (max-width: $screen-sm-min - 1) {
+    .col-state {
+      height: 500px;
+    }
+
+    .col-metadata {
+      height: 600px;
     }
   }
 }
